--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,11 @@
 Options -MultiViews
 RewriteEngine On
+
+# Handle Angular and React Router
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^ index.html [QR,L]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /index.html [L]
+
+# Specific rule for admin route
+RewriteRule ^admin/?$ /index.html [L]
+RewriteRule ^admin/(.*)$ /index.html [L]
